# fundal_algorithms

./: CMakeLists.txt
Laba 2/: 2-2.c  2-2.h  2-7.c  CMakeLists.txt  laba2-2.c
Laba 2/task1/: 2-1.c  2-1.h  laba2-1.c
Laba 2/task10/: 2-10.c  2-10.h  main2-10.c
Laba 2/task2/: laba2-2.c
Laba 2/task3/: 2-3.c  2-3.h  main2-3.c  test2.txt
Laba 2/task4/: 2-4.c  2-4.h  main2-4.c
Laba 2/task7/: 2-7.h  laba2-7.c
Laba 2/task8/: 2-8.c  2-8.h  laba2-8.c
Laba 2/task9/: 2-9.c  2-9.h  main2-9.c
Laba3/task1/: 3-1.c  3-1.h  laba3-1.c
Laba3/task10/: 3-10.c  3-10.h  laba3-10.c
Laba3/task2/: 3-2.c  3-2.h  main3-2.c
Laba3/task3/: 3-3.c  3-3.h  laba3-3.c
Laba3/task4/: strings.c  strings.h
Laba4/task1/: 4-1.c  4-1.h  hash_table.c  hash_table.h  main4-1.c
